* src/business/business-core/gncInvoice.[ch]: define 	  INVOICE_IS_PAID and create gncInvoiceIsPaid() function (the 	  prototype already existed, but it was never implemented). 	* src/business/business-gnome/dialog-invoice.c: add IS_PAID column 	  and the ability to search for paid/not-paid invoices. 	Fixes #106035.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8406 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-05-26  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-core/gncInvoice.[ch]: define
+	  INVOICE_IS_PAID and create gncInvoiceIsPaid() function (the
+	  prototype already existed, but it was never implemented).
+	* src/business/business-gnome/dialog-invoice.c: add IS_PAID column
+	  and the ability to search for paid/not-paid invoices.
+	Fixes #106035.
+
 2003-05-25  Chris Lyttle  <chris@wilddev.net>
 
 	* configure.in: release 1.8.4
