--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,10 @@
 	  dependending on whether the cursor is on the current line or
 	  not.
 
+	* src/business/business-gnome/dialog-invoice.c: don't constantly
+	  resize the invoice window every time we update ourselves.  Fixes
+	  #113775
+
 2003-05-28  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/gnc-hbci-transfer.c, dialog-hbcitrans.c,
