--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-29  Christian Stimming  <stimming@tuhh.de>
+
+	* po/nl.po, po/en_GB.po: Updated Dutch and British English
+	translation.
+
 2003-05-28  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-core/gncTaxTable.c: when asking for
