2003-05-29  Christian Stimming  <stimming@tuhh.de>
	* configure.in: OpenHBCI version 0.9.11 is required now. Earlier
	versions cause a segfault with any recent OpenSSL.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8446 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-29  Christian Stimming  <stimming@tuhh.de>
 
+	* configure.in: OpenHBCI version 0.9.11 is required now. Earlier
+	versions cause a segfault with any recent OpenSSL.
+
 	* po/nl.po, po/en_GB.po: Updated Dutch and British English
 	translation.
 
