* src/business/business-core/gncInvoice.[ch]: add APIs to get 	  TotalSubtotal() and TotalTax(). 	* src/business/business-gnome/dialog-invoice.c: Add Subtotal and Tax 	  labels in the summary bar to print the Invoice's total amounts. 	Fixes #113769.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8451 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-29  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-core/gncInvoice.[ch]: add APIs to get
+	  TotalSubtotal() and TotalTax().
+	* src/business/business-gnome/dialog-invoice.c: Add Subtotal and Tax
+	  labels in the summary bar to print the Invoice's total amounts.
+	Fixes #113769.
+
 2003-05-29  Christian Stimming  <stimming@tuhh.de>
 
 	* configure.in: OpenHBCI version 0.9.11 is required now. Earlier
