--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-29  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/gnc-hbci-transfer.c: Make sure the amount
+	stays a decimal number instead of some fraction.
+
 2003-05-28  Benoit Grégoire  <bock@step.polymtl.ca>
 
 	* src/import-export/import-settings.c: Fix pref being ignored bug.
