2003-05-30  Christian Stimming  <stimming@tuhh.de>
	* po/cs.po: Updated complete (!) Czech translation by Miloslav
	Trmac <mitr@volny.cz>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8466 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-30  Christian Stimming  <stimming@tuhh.de>
+
+	* po/cs.po: Updated complete (!) Czech translation by Miloslav
+	Trmac <mitr@volny.cz>.
+
 2003-05-29  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome/glade/register.glade: add sort entries for Action and Notes
