2003-05-30  Christian Stimming  <stimming@tuhh.de>
	* po/de.po, po/glossary/de.po: Updated German translation. Changed
	translation of "depot" to "Aktienkonto".


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8469 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-30  Christian Stimming  <stimming@tuhh.de>
 
+	* po/de.po, po/glossary/de.po: Updated German translation. Changed
+	translation of "depot" to "Aktienkonto".
+
 	* po/cs.po: Updated complete (!) Czech translation by Miloslav
 	Trmac <mitr@volny.cz>.
 
