--- a/po/glossary/de.po
+++ b/po/glossary/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnucash 1.7\n"
 "POT-Creation-Date: 2002-11-05 23:04+0100\n"
-"PO-Revision-Date: 2003-04-14 22:46+0200\n"
+"PO-Revision-Date: 2003-05-30 21:08+0200\n"
 "Last-Translator: Christian Stimming <stimming@tuhh.de>\n"
 "Language-Team: DE\n"
 "MIME-Version: 1.0\n"
@@ -75,7 +75,7 @@ msgstr "Sparkonto"
 
 #. "-"
 msgid "account type: Stock"
-msgstr "Depot"
+msgstr "Aktienkonto (früher: Depot)"
 
 #. "-"
 msgid "account: parent account"
