2003-05-30  Christian Stimming  <stimming@tuhh.de>
	* lib/guppi-legend.patch: Include patch for Guppi that fixes
	reversed legend problem.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8472 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-30  Christian Stimming  <stimming@tuhh.de>
 
+	* lib/guppi-legend.patch: Include patch for Guppi that fixes
+	reversed legend problem.
+
 	* po/de.po, po/glossary/de.po: Updated German translation. Changed
 	translation of "depot" to "Aktienkonto".
 
