--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 	* src/gnome/glade/print.glade: remove data that is now part of the
 	  date-format widget.
 
+	  Backport the Deluxe Check format:
+	
 	* src/gnome/glade/print.glade: add "Deluxe Personal Check" type
 	* src/gnome/dialog-print-check.c: add support for choosing
 	  a "deluxe" check type.
@@ -17,6 +19,42 @@
 	* src/scm/printing/print-check.scm: some finer adjustments on
 	  the locations for Deluxe personal checks.
 
+	  Backport the QueryList widget and associated usage (this allows
+	  more places to have sortable column displays for query results):
+
+	* src/gnome-utils/gnc-query-list.[ch]: an abstracted Query list
+	  widget to display the results of a Query.
+	* src/engine/Query{,P}.h: move the location of gncQuerySearchFor()
+	  to allow callers to look it up without requiring the private
+	  header.
+	* src/business/business-core/gncInvoice.[ch]: define
+	  INVOICE_IS_PAID and create gncInvoiceIsPaid() function (the
+	  prototype already existed, but it was never implemented).
+	* src/business/business-gnome/dialog-invoice.c: add IS_PAID column
+	  and the ability to search for paid/not-paid invoices.
+	* src/gnome-utils/Makefile.am: build gnc-query-list
+	* src/gnome-utils/gnc-query-list.[ch]: finish the GNCQueryList.
+	  - allow active-column sorting
+	  - watch all the entities in the query and update when an entry changes
+	  - use a checkbox to display booleans
+	* src/gnome-utils/search-param.[ch]: add extra APIs required to support
+	  the initial QueryList implementation
+	* src/gnome-search/dialog-search.c: Convert to use the new
+	  GNCQueryList to display the search results.
+	Fixes #106035
+	* src/gnome/reconcile-list.[ch]: Port to the gnc-query-list.
+	  Remove all the extraneous code.
+	* src/gnome-utils/gnc-query-list.[ch]: Add code so the reconcile-list
+	  can successfully use the query-list.  Add a construct() method.
+	  Add an "unselect_all()" method.  Add the ability to print numerics
+	  as an ABS and invert the sort (defaults to off).  Add methods to
+	  determine if an item is in the list, and one to refresh the display
+	  of an item.
+	* src/gnome-utils/search-param.[ch]: fix the spelling of resizeable
+	* src/gnome-utils/gnc-query-list.c: we can't use a reversed list
+	  and prepend() because then we're always adding row 0 so the
+	  saved checkmarks fail.  So, use the slow way and use 'append()'.
+	
 2003-05-30  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-gnome/dialog-customer.c:
