2003-06-02  Christian Stimming  <stimming@tuhh.de>
	* po/pt_BR.po: Updated Brazilian portugese translation by Jon
	Lapham <lapham@extracta.com.br>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8483 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-02  Christian Stimming  <stimming@tuhh.de>
+
+	* po/pt_BR.po: Updated Brazilian portugese translation by Jon
+	Lapham <lapham@extracta.com.br>.
+
 2003-06-01  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome-utils/gnc-date-format.*: Create a new "date format"
