2003-06-04  Christian Stimming  <stimming@tuhh.de>
	* src/import-export/hbci/hbci-interaction.c: Adapted to latest
	OpenHBCI changes.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8488 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-04  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/hbci-interaction.c: Adapted to latest
+	OpenHBCI changes.
+
 2003-06-02  Christian Stimming  <stimming@tuhh.de>
 
 	* po/pt_BR.po: Updated Brazilian portugese translation by Jon
