2003-06-08  Christian Stimming  <stimming@tuhh.de>
	* src/import-export/hbci/*.c: Remove old unused code.

	* src/import-export/hbci/hbci-interaction.c: Add more user
	feedback functions.

	* src/import-export/hbci/gnc-hbci-utils.c: Improve error handling.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8491 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-06-08  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/*.c: Remove old unused code.
+
+	* src/import-export/hbci/hbci-interaction.c: Add more user
+	feedback functions.
+
+	* src/import-export/hbci/gnc-hbci-utils.c: Improve error handling.
+
 2003-06-04  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/hbci-interaction.c: Adapted to latest
