--- a/po/de.po
+++ b/po/de.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnucash 1.8\n"
-"POT-Creation-Date: 2003-06-08 14:55+0200\n"
-"PO-Revision-Date: 2003-06-08 15:04+0200\n"
+"POT-Creation-Date: 2003-06-09 11:31+0200\n"
+"PO-Revision-Date: 2003-06-09 11:31+0200\n"
 "Last-Translator: Christian Stimming <stimming@tuhh.de>\n"
 "Language-Team: DE\n"
 "MIME-Version: 1.0\n"
@@ -8404,39 +8404,72 @@ msgstr "Verbindung schließen"
 #. * needed inside Germany (HBCI is not supported anywhere
 #. * else). You may safely ignore strings from the
 #. * import-export/hbci subdirectory in other countries.
-#: src/import-export/hbci/dialog-hbcitrans.c:205
+#: src/import-export/hbci/dialog-hbcitrans.c:226
 msgid "Enter an Online Direct Debit Note"
 msgstr "Online-Lastschrift eingeben"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:208
+#: src/import-export/hbci/dialog-hbcitrans.c:229
 msgid "Debited Account Owner"
 msgstr "Zahlungspflichtiger"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:210
+#: src/import-export/hbci/dialog-hbcitrans.c:231
 msgid "Debited Account Number"
 msgstr "Konto-Nr. des Zahlungspflichtigen"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:212
+#: src/import-export/hbci/dialog-hbcitrans.c:233
 msgid "Debited Account Bank Code"
 msgstr "BLZ des Zahlungspflichtigen"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:215
+#: src/import-export/hbci/dialog-hbcitrans.c:236
 msgid "Credited Account Owner"
 msgstr "Auftraggeber"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:217
+#: src/import-export/hbci/dialog-hbcitrans.c:238
 msgid "Credited Account Number"
 msgstr "Konto-Nr. des Auftraggebers"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:219
+#: src/import-export/hbci/dialog-hbcitrans.c:240
 msgid "Credited Account Bank Code"
 msgstr "BLZ des Auftraggebers"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:240
+#: src/import-export/hbci/dialog-hbcitrans.c:261
+#: src/import-export/hbci/dialog-hbcitrans.c:539
+#: src/import-export/hbci/dialog-hbcitrans.c:548
 msgid "(unknown)"
 msgstr "(unbekannt)"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:372
+#: src/import-export/hbci/dialog-hbcitrans.c:356
+msgid ""
+"The amount is zero or the amount field could not be \n"
+"interpreted correctly. You might have mixed up decimal \n"
+"point and comma, compared to your locale settings. \n"
+"\n"
+"This does not result in a valid online transfer job.\n"
+"Do you want to enter the job again?"
+msgstr ""
+"Der Betrag ist Null oder der eingegebene Betrag konnte nicht korrekt\n"
+"interpretiert werden. Eventuell haben Sie Komma und Dezimalpunkt\n"
+"verwechselt. In der länderspezifischen Einstellung Deutschland (locale\n"
+"de, LANG=de_DE) müssen Sie ein Komma eingeben, andernfalls einen\n"
+"Punkt.\n"
+"\n"
+"Dies ergibt keinen zulässigen Zahlungsauftrag. Wollen Sie den Auftrag\n"
+"erneut eingeben?"
+
+#: src/import-export/hbci/dialog-hbcitrans.c:386
+#, c-format
+msgid ""
+"The internal check of the destination account number '%s' \n"
+"at the specified bank with bank code '%s' failed. This means \n"
+"the account number might contain an error. Should the online \n"
+"transfer job be sent with this account number anyway?"
+msgstr ""
+"Die interne Überprüfung der angegebenen Kontonummer '%s' bei der Bank\n"
+"mit der Bankleitzahl '%s' ergab, daß die Kontonummer wahrscheinlich\n"
+"einen Fehler enthält. Wollen Sie den Auftrag trotzdem mit dieser\n"
+"Kontonummer abschicken?"
+
+#: src/import-export/hbci/dialog-hbcitrans.c:460
 msgid ""
 "The job was successfully sent to the bank, but the \n"
 "bank is refusing to execute the job. Please check \n"
@@ -8454,7 +8487,7 @@ msgstr ""
 "\n"
 "Wollen Sie den Auftrag erneut eingeben?"
 
-#: src/import-export/hbci/dialog-hbcitrans.c:459
+#: src/import-export/hbci/dialog-hbcitrans.c:578
 msgid "Enter name for new template:"
 msgstr "Bitte geben Sie einen Namen für die neue Überweisungsvorlage ein:"
 
