2003-06-12  Christian Stimming  <stimming@tuhh.de>
	* doc/TRANSLATION_HOWTO: Added, by Jon Lapham
	<lapham@extracta.com.br>.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8590 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-12  Christian Stimming  <stimming@tuhh.de>
+
+	* doc/TRANSLATION_HOWTO: Added, by Jon Lapham
+	<lapham@extracta.com.br>.
+
 2003-06-09  Christian Stimming  <stimming@tuhh.de>
 
 	* configure.in, src/import-export/hbci/dialog-hbcitrans.c: Add
