--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-17  Derek Atkins  <derek@ihtfp.com>
+
+	* src/gnome/gw-gnc-spec.scm: return the Totd symbol to its
+	  original name
+
 2003-06-14  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.am (EXTRA_DIST): Add config.rpath.
