--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-17  Chris Lyttle  <chris@wilddev.net>
+
+	* src/scm/help-topics-index.scm: add Jon Lapham's patch
+
 2003-06-17  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-core/gncBillTerm.c: fix gncBillTermCopy()
