--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-22  Derek Atkins  <derek@ihtfp.com>
+
+	* src/report/standard-reports/category-barchart.scm: Properly
+	  reverse the balances of accounts instead of using the internal
+	  functions to determine when to reverse.  Fixes #115268.
+
 2003-06-21  Christian Stimming  <stimming@tuhh.de>
 
 	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
