--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
 	* po/it.po: Updated Italian translation by Lorenzo Cappelletti
 	<lorenzo.cappelletti@email.it>.
 
+	* src/backend/file/gnc-backend-file.c: Apply sam's patch:
+	  don't allow selection of directory for save file
+
 2003-06-19  Chris Lyttle  <chris@wilddev.net>
 
 	* src/scm/help-topics-index.scm: add Jon Lapham's patch
