--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,10 @@
 	* src/gnome/window-register.c: Don't close the register if the
 	user cancelled. #105742
 
+	* src/gnome/window-reconcile.c: If the user has manually entered
+	an amount, then stop automatically updated the amount when the
+	date is changed. #110806
+
 2003-06-22  David Hampton  <hampton@employees.org>
 
 	* src/gnome-utils/dialog-commodity.[ch]: Clean up usage of the
