--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-28  Derek Atkins  <derek@ihtfp.com>
+	
+	* src/backend/file/gnc-backend-file.c: Fix 'Save As' so it can
+	write to non-existing files.  (Ported David Hampton's patch from HEAD)
+
 2003-06-27  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/dialog-hbcitrans.c: Fix stupid bug with
