--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-01  David Hampton  <hampton@employees.org>
+
+	* src/backend/file/gnc-backend-file.c: New data file should have
+	same uid/gidas original file. #105662
+
 2003-06-28  Derek Atkins  <derek@ihtfp.com>
 	
 	* src/backend/file/gnc-backend-file.c: Fix 'Save As' so it can
