--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-02  Chris Lyttle  <chris@wilddev.net>
+
+	* src/scm/help-topics-index.scm: add Jon Lapham's patch
+
 2003-07-02  Christian Stimming  <stimming@tuhh.de>
 
 	* accounts/it/*: Added Italian account templates by Lorenzo
