--- a/README
+++ b/README
@@ -127,15 +127,24 @@ http://www.gnucash.org/pub/gnucash/
 Development versions:
 http://www.gnucash.org/en/hacking.phtml
 
-####################
-Upgrading from 1.6.x
---------------------
+###############################
+Upgrading from earlier versions
+-------------------------------
 
 There are many, many changes from the 1.6 series - have a look at the
-NEWS file if you want more details. In particular, GnuCash now
-requires g-wrap 1.3.4 or better. See the "dependencies"
-section of this file for more detail. Files are not able to be accessed
-by 1.6 once the new features are used and saved. So backup your data!
+NEWS file if you want more details. In particular:
+
+- GnuCash now requires g-wrap 1.3.4 or better. See the "dependencies"
+section of this file for more detail. 
+
+- The data files are not able to be accessed by 1.6 once the new
+features are used and saved, i.e. they are not backwards-compatible! 
+So backup your data!
+
+- The help documentation of gnucash has been moved to the separate
+package gnucash-docs. If you see error messages like "URL not found"
+when clicking on the "Help" menu item, you need to install the
+separate package gnucash-docs.
 
 We hope you enjoy all the new features!
 
