* src/business/business-core/gncBillTerm.c: 	* src/business/business-core/gncTaxTable.c: 	  Fix a crash where removing items in the wrong order could 	  cause "Bad Things" to happen -- referencing an invalid 	  object.  When being destroyed, an object should remove itself 	  from it's parent's list of children, in addition to removing 	  itself from it's children's pointer-to-parent.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8849 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-07-09  Derek Atkins <derek@ihtfp.com>
+	
+	* src/business/business-core/gncBillTerm.c:
+	* src/business/business-core/gncTaxTable.c:
+	  Fix a crash where removing items in the wrong order could
+	  cause "Bad Things" to happen -- referencing an invalid
+	  object.  When being destroyed, an object should remove itself
+	  from it's parent's list of children, in addition to removing
+	  itself from it's children's pointer-to-parent.
+
 2003-07-09  Christian Stimming  <stimming@tuhh.de>
 
 	* README: Added remark about gnucash-docs.
