* src/business/business-gnome/business-gnome.scm: sort the 	  bills before displaying them, so they appear in a consistent 	  order (by date due).
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8850 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,10 @@
 	  from it's parent's list of children, in addition to removing
 	  itself from it's children's pointer-to-parent.
 
+	* src/business/business-gnome/business-gnome.scm: sort the
+	  bills before displaying them, so they appear in a consistent
+	  order (by date due).
+
 2003-07-09  Christian Stimming  <stimming@tuhh.de>
 
 	* README: Added remark about gnucash-docs.
