--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-14  Derek Atkins  <derek@ihtfp.com>
+
+	* configure.in: search for db-4.1.  Fixes #116509.
+
 2003-07-09  Derek Atkins <derek@ihtfp.com>
 	
 	* src/business/business-core/gncBillTerm.c:
