--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
 	  and action of Invoice and Payement Transactions/Splits, to make
 	  it easier to print a check off the posted transactions.
 
+	* src/report/standard-reports/cash-flow.scm: fix some labels and
+	  add more text to make it more clear what's going on.  Hopefully
+	  fixes #104878.
+
 2003-07-14  Derek Atkins  <derek@ihtfp.com>
 
 	* configure.in: search for db-4.1.  Fixes #116509.
