--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-23  Derek Atkins  <derek@ihtfp.com>
+
+	* src/engine/gnc-book.c: be sure to delete the book's KVP when we
+	  destroy it.
+
 2003-07-17  Derek Atkins  <derek@ihtfp.com>
 
 	* src/backend/file/gnc-backend-file.c:  Don't need to set the
