2003-07-26  Christian Stimming  <stimming@tuhh.de>
	* accounts/it/*: Updates to the Italian account templates by
	Lorenzo Cappelletti <lorenzo.cappelletti@email.it>


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8928 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-26  Christian Stimming  <stimming@tuhh.de>
+
+	* accounts/it/*: Updates to the Italian account templates by
+	Lorenzo Cappelletti <lorenzo.cappelletti@email.it>
+
 2003-07-23  Derek Atkins  <derek@ihtfp.com>
 
 	* src/engine/gnc-book.c: be sure to delete the book's KVP when we
