* src/engine/date.c: back port a change to gnc-date.c. 	  If the date format hasn't changed and the month/day appears 	  in the wrong order, try swaping them. 	Fixes #117198
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8967 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-28  Derek Atkins  <derek@ihtfp.com>
+
+	* src/engine/date.c: back port a change to gnc-date.c.
+	  If the date format hasn't changed and the month/day appears
+	  in the wrong order, try swaping them.
+	Fixes #117198
+
 2003-07-28  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/druid-hbci-initial.c: Add button for
